*Added About-us section and illustration *Added features section and illustration *fixing some unresponsiveness *Cleaning code *Fixing low contrast *Editing some caption

--- a/assets/css/dashboard.css
+++ b/assets/css/dashboard.css
@@ -3,195 +3,197 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font: inherit;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	font: inherit;
 }
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role="list"],
 ol[role="list"] {
-  list-style: none;
+	list-style: none;
 }
 /* Set core root defaults */
 html:focus-within {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 html,
 body {
-  height: 100%;
-  font-family: 'Poppins', sans-serif;
+	height: 100%;
+	font-family: "Poppins", sans-serif;
 }
 /* Set core body defaults */
 body {
-  text-rendering: optimizeSpeed;
-  line-height: 1.5;
+	text-rendering: optimizeSpeed;
+	line-height: 1.5;
 }
 /* A elements that don't have a class get default styles */
 a:not([class]) {
-  text-decoration-skip-ink: auto;
+	text-decoration-skip-ink: auto;
 }
 /* Make images easier to work with */
 img,
 picture,
 svg {
-  max-width: 100%;
-  display: block;
+	max-width: 100%;
+	display: block;
 }
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
-  html:focus-within {
-    scroll-behavior: auto;
-  }
-  *,
-  *::before,
-  *::after {
-    animation-duration: 0.01ms !important;
-    animation-iteration-count: 1 !important;
-    transition-duration: 0.01ms !important;
-    scroll-behavior: auto !important;
-  }
+	html:focus-within {
+		scroll-behavior: auto;
+	}
+	*,
+	*::before,
+	*::after {
+		animation-duration: 0.01ms !important;
+		animation-iteration-count: 1 !important;
+		transition-duration: 0.01ms !important;
+		scroll-behavior: auto !important;
+	}
 }
 
 /* /CSS RESET */
 
 /* sidebar */
 .dashboard-container {
-  display: grid;
-  gap: 1.8rem;
-  grid-template-columns: 16rem auto;
+	display: grid;
+	gap: 1.8rem;
+	grid-template-columns: 16rem auto;
 }
 
 aside {
-  height: 100vh;
-  background: hsl(222, 82%, 65%);
+	height: 100vh;
+	background: hsl(222, 82%, 65%);
 }
 
 aside .top {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-top: 6rem;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin-top: 6rem;
 }
 
 aside .logo {
-  margin-inline: auto;
+	margin-inline: auto;
 }
 
-aside .logo i, h4, p {
-  color: hsl(58, 81%, 83%);
+aside .logo i,
+h4,
+p {
+	color: hsl(58, 81%, 83%);
 }
 
 aside .logo i {
-  font-size: 3rem;
+	font-size: 3rem;
 }
 
 aside .logo h4 {
-  font-size: 1.875rem;
-  font-weight: 500;
-  margin-bottom: .3rem;
+	font-size: 1.875rem;
+	font-weight: 500;
+	margin-bottom: 0.3rem;
 }
 
 aside .sidebar {
-  margin-top: 8rem;
+	margin-top: 8rem;
 }
 
 aside .sidebar .menu-icons .icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: all 300ms ease-in-out;
-  font-size: 2rem;
-  position: relative;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	transition: all 300ms ease-in-out;
+	font-size: 2rem;
+	position: relative;
 }
 
 aside .sidebar .menu-icons .icon:not(:last-of-type) {
-  margin-bottom: 4rem;
+	margin-bottom: 4rem;
 }
 
 aside .sidebar .menu-icons .icon i {
-  color: hsl(58, 81%, 83%);
+	color: hsl(58, 81%, 83%);
 }
 
 aside .sidebar .menu-icons .icon:hover {
-  cursor: pointer;
-  transform: translateX(-20px);
+	cursor: pointer;
+	transform: translateX(-20px);
 }
 
 aside .sidebar .menu-icons .icon .hide {
-  visibility: hidden;
-  opacity: 0;
-  transition: all 300ms ease-in-out;
-  font-size: 1rem;
-  position: absolute;
+	visibility: hidden;
+	opacity: 0;
+	transition: all 300ms ease-in-out;
+	font-size: 1rem;
+	position: absolute;
 }
 
 aside .sidebar .menu-icons .icon .hide p {
-  margin-bottom: 0;
+	margin-bottom: 0;
 }
 
 aside .sidebar .menu-icons .icon:hover > .hide {
-  visibility: visible;
-  opacity: 1;
-  transform: translateX(45px);
+	visibility: visible;
+	opacity: 1;
+	transform: translateX(45px);
 }
 
 aside .sidebar .menu-icons .icon:last-of-type:hover > .hide {
-  transform: translateX(65px);
+	transform: translateX(65px);
 }
 
 aside .sidebar .logout {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 2rem;
-  margin-top: 7rem;
-  position: relative;
-  transition: all 300ms ease-in-out;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 2rem;
+	margin-top: 7rem;
+	position: relative;
+	transition: all 300ms ease-in-out;
 }
 
 aside .sidebar .logout:hover {
-  cursor: pointer;
-  transform: translateX(-20px);
+	cursor: pointer;
+	transform: translateX(-20px);
 }
 
 aside .sidebar .logout i {
-  color: hsl(58, 81%, 83%);
+	color: hsl(58, 81%, 83%);
 }
 
 aside .sidebar .logout .hide {
-  visibility: hidden;
-  opacity: 0;
-  transition: all 300ms ease-in-out;
-  font-size: 1rem;
-  position: absolute;
+	visibility: hidden;
+	opacity: 0;
+	transition: all 300ms ease-in-out;
+	font-size: 1rem;
+	position: absolute;
 }
 
 aside .sidebar .logout:hover > .hide {
-  visibility: visible;
-  opacity: 1;
-  transform: translateX(55px);
+	visibility: visible;
+	opacity: 1;
+	transform: translateX(55px);
 }
 
 aside .sidebar .logout .hide p {
-  margin-bottom: 0;
+	margin-bottom: 0;
 }
 
 /* main content */
 main .title {
-  font-family: 'Caveat', cursive;;
-  color: hwb(222 37% 6%); 
-  margin: 6rem 0 0 1.5rem;
-  font-size: 3.5rem;
+	font-family: "Caveat", cursive;
+	color: hwb(222 37% 6%);
+	margin: 6rem 0 0 1.5rem;
+	font-size: 3.5rem;
 }
 
 main .no-items {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 8rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin-top: 8rem;
 }
 
 main .no-items img {
-  width: 30rem;
+	width: 30rem;
 }
